@@ -20,11 +20,10 @@ import gobject
 import gtk
 import tree
 import hexdump
-import Doc
-import oleparse
+import Doc, cmd
 import escher
 import vsd, vsdchunks,vsdstream4
-import xls, vba
+import xls, vba, ole
 import emfparse,svm,mf,wmfparse,cdr,emfplus
 
 version = "0.5.46"
@@ -339,7 +338,8 @@ class ApplicationMainWindow(gtk.Window):
 				vadj.set_value(newval)
 			except:
 				print "Wrong address"
-
+		elif goto[0] == "$":
+			cmd.parse (goto,self.entry,self.das[pn])
 		else:
 			try:
 				self.das[pn].view.expand_to_path(goto)
@@ -556,6 +556,9 @@ class ApplicationMainWindow(gtk.Window):
 				elif	ntype[0] == "xls":
 					if xls.biff5_ids.has_key(ntype[1]):
 						xls.biff5_ids[ntype[1]](hd,data)
+				elif	ntype[0] == "ole":
+					if ole.ole_ids.has_key(ntype[1]):
+						ole.ole_ids[ntype[1]](hd,data)
 
 	def hdscroll_cb(self,view,event):
 		pn = self.notebook.get_current_page()
